--- a/.env
+++ b/.env
@@ -1,16 +1,18 @@
 BOT_TOKEN=7116360152:AAGhmfEmNLDooiMRabpyN2PspE5FMzq8lIk
 
-ENV=prod
+ENV=local
 
 MEDIA_LOCAL=/home/yusuf/Desktop/sportik/media/
 MEDIA_PROD=/app/media/
+
+BOT_ADMIN_TGID=6462294430
 
 POSTGRES_DB=sportik
 POSTGRES_PASSWORD=sportikpassword
 POSTGRES_USER=sportik
 POSTGRES_HOST=db
 
-USE_CACHE=True
+USE_CACHE=False
 
 REDIS_HOST=redis
 REDIS_PORT=6379
