--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 BOT_TOKEN=7116360152:AAGhmfEmNLDooiMRabpyN2PspE5FMzq8lIk
 
-ENV=local
+ENV=prod
 
 MEDIA_LOCAL=/home/yusuf/Desktop/sportik/media/
 MEDIA_PROD=/app/media/
@@ -12,7 +12,7 @@ POSTGRES_PASSWORD=sportikpassword
 POSTGRES_USER=sportik
 POSTGRES_HOST=db
 
-USE_CACHE=False
+USE_CACHE=True
 
 REDIS_HOST=redis
 REDIS_PORT=6379
